replaces long constructor call by valueOf